--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             height: 3px;
             width: 0;
             position: fixed;
-            top: 0;
+            /* top: 0; */
             left: 0;
             z-index: 1999;
         }
