--- a/Day-1(Assignment)/index.html
+++ b/Day-1(Assignment)/index.html
@@ -1,30 +1,15 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <style>
-        * {
-            margin: 0;
-        }
-
-        #progress {
-            background-color: green;
-            height: 3px;
-            width: 0;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 1999;
-        }
-    </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.2/browser/pixi.js"
-        integrity="sha512-XHX32YCocEDCIiENmO7pf91TtRITLfCagN+uLlj9sJ7RUVBHN1JZtlfb02x4OyXfkuQegd1u6i9mzpRMg+w5xw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Memory Game</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.2/browser/pixi.js" integrity="sha512-XHX32YCocEDCIiENmO7pf91TtRITLfCagN+uLlj9sJ7RUVBHN1JZtlfb02x4OyXfkuQegd1u6i9mzpRMg+w5xw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
-
 <body>
-    <!-- <div id="bar"></div>
-    <div id="progress"></div> -->
-
+    
     <main id="gameContainer">
         <div id="loader">
             <div id="barContainer">
@@ -34,7 +19,6 @@
         </div>
         <div id="game"></div>
     </main>
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
 </body>
-
 </html>
