--- a/Sep-08/index.html
+++ b/Sep-08/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.2/browser/pixi.js" integrity="sha512-XHX32YCocEDCIiENmO7pf91TtRITLfCagN+uLlj9sJ7RUVBHN1JZtlfb02x4OyXfkuQegd1u6i9mzpRMg+w5xw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.2/browser/pixi.mjs" type="module"></script>
+    <!-- <script type="importmap">
+        {
+          "imports": {
+            "pixi": "https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.2/browser/pixi.mjs"
+          }
+        }
+        </script> -->
 </head>
 <body>
     <main id="gameContainer">
@@ -18,6 +25,6 @@
         </div>
         <div id="game"></div>
     </main>
-    <script src="main.js"></script>
+    <script src="main.mjs" type="module"></script>
 </body>
 </html>
