--- a/Sep-14/index.html
+++ b/Sep-14/index.html
@@ -5,10 +5,22 @@
         <title>Webpack App</title>
     </head>
     <body>
-        <main>
-            <!-- <div id="loader"></div> -->
-            <div id="game"></div>
-        </main>
+        <h1>Hello world!</h1>
+        <h2>Tip: Check your console</h2>
     </body>
     
+    <script>
+        if ("serviceWorker" in navigator) {
+            window.addEventListener("load", () => {
+                navigator.serviceWorker
+                    .register("service-worker.js")
+                    .then((registration) => {
+                        console.log("Service Worker registered: ", registration);
+                    })
+                    .catch((registrationError) => {
+                        console.error("Service Worker registration failed: ", registrationError);
+                    });
+            });
+        }
+    </script>
 </html>
